# bo_sent_tokenizer

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/bo_sent_tokenizer/: __init__.py  utils.py  vars.py
tests/: test_fast_sentence_tokenizer.py  test_segmenter.py  test_sentence_tokenizer.py
